; ModuleID = '/home/carl/AnghaBench/micropython/ports/pic16bit/extr_pic16bit_mphal.c_mp_hal_delay_ms.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/pic16bit/extr_pic16bit_mphal.c_mp_hal_delay_ms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_hal_delay_ms(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  store i32 %5, i32* %3, align 4
  br label %6

6:                                                ; preds = %18, %1
  %7 = load i32, i32* %3, align 4
  %8 = icmp sgt i32 %7, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %6
  store volatile i32 0, i32* %4, align 4
  br label %10

10:                                               ; preds = %14, %9
  %11 = load volatile i32, i32* %4, align 4
  %12 = icmp slt i32 %11, 5000
  br i1 %12, label %13, label %17

13:                                               ; preds = %10
  br label %14

14:                                               ; preds = %13
  %15 = load volatile i32, i32* %4, align 4
  %16 = add nsw i32 %15, 1
  store volatile i32 %16, i32* %4, align 4
  br label %10

17:                                               ; preds = %10
  br label %18

18:                                               ; preds = %17
  %19 = load i32, i32* %3, align 4
  %20 = add nsw i32 %19, -1
  store i32 %20, i32* %3, align 4
  br label %6

21:                                               ; preds = %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
